[package]
name = "spl"
version = "0.1.0"
authors = ["Jacob Henn <windowWeasel@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.24.2"
bunt = "0.2.4"
chrono = "0.4.19"

[dependencies.clap]
version = "2.33.3"
default-features = false
features = [ "color" ]
